# boedagent

./: .gitignore  FIGURES.md  LFIAX_CONNECTOR.md  LITERATURE_TEST_PLAN.md  PLAN.md  README.md  pyproject.toml
data/bmp4_data/: BMP4_GRADIENT_README.md  bmp4_gradient_data.npz
docs/: architecture.md  literature_without_apis.md
examples/: __init__.py
examples/agent/: LIVE_LITERATURE_TEST.md  black_box_agent_sim.py  bmp4_gradient_agent.py  bmp4_gradient_comparison.py  explicit_linear_regression.py  linreg_sequential_agent.py  lit_only_dry_run.py  pharmacokinetic_ode.py  sir_build_submission_master.py  sir_compare_boed_vs_uniform.py  sir_replot_posterior_predictive.py  sir_sbc_agent.py  sir_sbc_postprocess.py  sir_sequential_agent.py  sir_uniform_baseline.py  test_live_literature_search.py
examples/autoresearch/bmp4_promisys/: program.md  trial.json
examples/cases/: PROBLEM_BUNDLE_FIELDS.md  README.md  __init__.py
examples/cases/bmp4_gradient/: README.md  __init__.py  data.py  inference.py  plotting.py  priors.py  problem.json  promisys_hyperparams.py  promisys_onestep.py  promisys_sequential.py  promisys_twostep.py  registry.py  sequential_analysis.py
examples/cases/linreg_sequential/: README.md  model.py  monotone.py  plotting.py  problem.json  sequential_pyro.py
examples/specs/: foster_ab_test_linear.json  foster_revealed_preference.json  foster_variational_interactive.json  lfiax_linear_distribution.json  lfiax_linear_point.json  lfiax_stub.json  pyro_linear_regression.json
scripts/: bmp4_autoresearch.py  bmp4_prediction_error_comparison.py  bmp4_prior_eig_estimate.py  bmp4_sequential_analysis.py  live_literature_search.py  smoketest.py
src/boed_agent/: __init__.py  agent.py  classifier.py  cli.py  models.py  prior_builder.py  simulator_choice.py  simulator_protocol.py
tests/: fake_agents_sdk.py  test_agent_orchestrator.py  test_bmp4_gradient_example.py  test_clarification.py  test_classifier.py  test_cli.py  test_lfiax_stub.py  test_literature_advisory.py  test_literature_clients.py  test_literature_clients_live.py  test_literature_pipeline.py  test_local_corpus_client.py  test_openai_agents_sdk.py  test_prior_builder.py  test_providers.py  test_pyro_backend_integration.py  test_runtime_and_tools.py  test_simulator_choice.py  test_spec.py  test_spec_implementation.py  test_trajectory_summary.py
(+86 files in other folders)
