[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boed-agent"
version = "0.1.0"
description = "Provider-neutral AI agent harness for Bayesian optimal experimental design"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "boed_agent collaborators" }]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
plot = ["matplotlib>=3.8"]
agents = ["openai>=1.40.0", "anthropic>=0.34.0", "openai-agents"]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.34.0"]
pyro = ["pyro-ppl>=1.8.6", "torch>=2.1"]
lfiax = ["lfiax @ git+https://github.com/vz415/lfiax.git"]
promisys = ["numpy>=1.24", "scipy>=1.10", "torch>=2.1", "eqtk>=0.1.3"]
minebed = [
    "torch>=2.1",
    "minebed @ git+https://github.com/stevenkleinegesse/minebed.git",
]
idad = [
    "torch>=2.1",
    "torchsde>=0.2.5",
    "idad @ git+https://github.com/desi-ivanova/idad.git",
]
literature = [
    "requests>=2.31",
    "tenacity>=8.2",
    "pypdf>=4.0",
    "hdbscan>=0.8",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6.0"]
all = [
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "openai-agents",
    "pyro-ppl>=1.8.6",
    "torch>=2.1",
    "scipy>=1.10",
    "eqtk>=0.1.3",
    "lfiax @ git+https://github.com/vz415/lfiax.git",
    "minebed @ git+https://github.com/stevenkleinegesse/minebed.git",
    "torchsde>=0.2.5",
    "idad @ git+https://github.com/desi-ivanova/idad.git",
    "requests>=2.31",
    "tenacity>=8.2",
    "pypdf>=4.0",
    "hdbscan>=0.8",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.scripts]
boed-agent = "boed_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `live` tests hit the real literature APIs (arXiv, Semantic Scholar,
# OpenAlex).  They are skipped by default; run them explicitly with
# `pytest -m live` and accept some network flakiness.
markers = [
    "live: tests that perform real HTTP calls to external APIs (skipped by default)",
]
addopts = "-m 'not live'"
